create-multi-vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create VPC A, VPC B and VPC C, each with IGW, NATGW, public and private subnets in 2 AZs"

Parameters:
  AMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: 'The ID of the AMI'
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

Resources:
  # VPC A Resources
  VpcA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: "VPC A"

  VpcAPublicSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Public Subnet AZ1"

  VpcAPublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn:
      - VpcA
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Public Subnet AZ2"

  VpcAPublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Public Route Table"

  VpcAPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - VpcAPublicSubnetRouteTable
      - VpcAPublicSubnet1
    Properties:
      RouteTableId: !Ref VpcAPublicSubnetRouteTable
      SubnetId: !Ref VpcAPublicSubnet1

  VpcAPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - VpcAPublicSubnetRouteTable
      - VpcAPublicSubnet2
    Properties:
      RouteTableId: !Ref VpcAPublicSubnetRouteTable
      SubnetId: !Ref VpcAPublicSubnet2

  VpcAPrivateSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: false
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Private Subnet AZ1"

  VpcAPrivateSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC A Private Subnet AZ2"
      VpcId: !Ref VpcA

  VpcAPrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Private Route Table"

  VpcAPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - VpcAPrivateSubnetRouteTable
      - VpcAPrivateSubnet1
    Properties:
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable
      SubnetId: !Ref VpcAPrivateSubnet1

  VpcAPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - VpcAPrivateSubnetRouteTable
      - VpcAPrivateSubnet2
    Properties:
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable
      SubnetId: !Ref VpcAPrivateSubnet2

  VpcAInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "VPC A IGW"

  VpcAInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - VpcA
      - VpcAInternetGateway
    Properties:
      VpcId: !Ref VpcA
      InternetGatewayId: !Ref VpcAInternetGateway

  VpcADirectInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: 
      - VpcAInternetGatewayAttachment
      - VpcAPublicSubnetRouteTable
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcAInternetGateway
      RouteTableId: !Ref VpcAPublicSubnetRouteTable

  VpcANatEip:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc

  VpcANatGateway:
    Type: "AWS::EC2::NatGateway"
    DependsOn: 
      - VpcAPublicSubnet1
      - VpcANatEip
    Properties:
      AllocationId: !GetAtt 'VpcANatEip.AllocationId'
      SubnetId: !Ref VpcAPublicSubnet1
      Tags:
        - Key: Name
          Value: "VPC A NATGW"

  VpcANatInternetRoutePrivate:
    Type: AWS::EC2::Route
    DependsOn: 
      - VpcANatGateway
      - VpcAPrivateSubnetRouteTable
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VpcANatGateway
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable

  VpcAEc2SecGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VpcA
    Properties:
      GroupDescription: Open ports for ICMP
      GroupName: "VPC A Security Group"
      VpcId: !Ref VpcA
      SecurityGroupIngress:
        - IpProtocol: icmp
          CidrIp: 10.0.0.0/8
          FromPort: "-1"
          ToPort: "-1"
        - IpProtocol: icmp
          CidrIp: 172.16.0.0/16
          FromPort: "-1"
          ToPort: "-1"

  VpcAPublicServerEc2:
    Type: AWS::EC2::Instance
    DependsOn: 
      - VpcAEc2SecGroup
      - VpcAPublicSubnet2
    Properties:
      IamInstanceProfile: "SSM-Role"
      ImageId: !Ref AMI
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref VpcAEc2SecGroup
          SubnetId: !Ref VpcAPublicSubnet2
      Tags:
        - Key: Name
          Value: "VPC A Public AZ2 Server"

  VpcAPrivateServerEc2:
    Type: AWS::EC2::Instance
    DependsOn: 
      - VpcAEc2SecGroup
      - VpcAPrivateSubnet1
    Properties:
      SubnetId: !Ref VpcAPrivateSubnet1
      ImageId: !Ref AMI
      InstanceType: t2.micro
      SecurityGroupIds:
        - Ref: VpcAEc2SecGroup
      IamInstanceProfile: "SSM-Role"
      Tags:
        - Key: Name
          Value: "VPC A Private AZ1 Server"

  # VPC B Resources
  VPCB:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.1.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: "VPC B"

  PublicSubnet1VPCB:
    Type: AWS::EC2::Subnet
    DependsOn:
      - VPCB
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: "10.1.0.0/24"
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC B Public Subnet AZ1"

  PublicSubnet2VPCB:
    Type: AWS::EC2::Subnet
    DependsOn:
      - VPCB
    Properties:
      VpcId:
        Ref: VPCB
      CidrBlock: "10.1.2.0/24"
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC B Public Subnet AZ2"

  PublicSubnetRouteTableVPCB:
    Type: AWS::EC2::RouteTable
    DependsOn: VPCB
    Properties:
      VpcId: !Ref VPCB
      Tags:
        - Key: Name
          Value: "VPC B Public Route Table"

  PublicASubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PublicSubnetRouteTableVPCB
      - PublicSubnet1VPCB
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableVPCB
      SubnetId: !Ref PublicSubnet1VPCB

  PublicBSubnetRouteTableAssociationVPCB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PublicSubnetRouteTableVPCB
      - PublicSubnet2VPCB
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableVPCB
      SubnetId: !Ref PublicSubnet2VPCB

  PrivateSubnet1VPCB:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCB
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: "10.1.1.0/24"
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC B Private Subnet AZ1"

  PrivateSubnet2VPCB:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCB
    Properties:
      VpcId: !Ref VPCB
      CidrBlock: "10.1.3.0/24"
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC B Private Subnet AZ2"

  PrivateSubnetRouteTableVPCB:
    Type: AWS::EC2::RouteTable
    DependsOn: VPCB
    Properties:
      VpcId:
        Ref: VPCB
      Tags:
        - Key: Name
          Value: "VPC B Private Route Table"

  PrivateASubnetRouteTableAssociationVPCB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PrivateSubnetRouteTableVPCB
      - PrivateSubnet1VPCB
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableVPCB
      SubnetId: !Ref PrivateSubnet1VPCB

  PrivateBSubnetRouteTableAssociationVPCB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PrivateSubnetRouteTableVPCB
      - PrivateSubnet2VPCB
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableVPCB
      SubnetId: !Ref PrivateSubnet2VPCB

  InternetGatewayVPCB:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "VPC B IGW"

  AttachGatewayVPCB:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: 
      - InternetGatewayVPCB
      - VPCB
    Properties:
      VpcId: !Ref VPCB
      InternetGatewayId: !Ref InternetGatewayVPCB

  DirectInternetRouteVPCB:
    Type: AWS::EC2::Route
    DependsOn: 
      - AttachGatewayVPCB
      - PublicSubnetRouteTableVPCB
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayVPCB
      RouteTableId: !Ref PublicSubnetRouteTableVPCB

  VPCBNATEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc

  VPCBNATGateway:
    DependsOn: 
      - AttachGatewayVPCB
      - PublicSubnet1VPCB
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt 'VPCBNATEIP.AllocationId'
      SubnetId: !Ref PublicSubnet1VPCB
      Tags:
        - Key: Name
          Value: "VPC B NATGW"

  VPCBNATInternetRoutePrivate:
    Type: AWS::EC2::Route
    DependsOn:
      - VPCBNATGateway
      - PrivateSubnetRouteTableVPCB
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VPCBNATGateway
      RouteTableId: !Ref PrivateSubnetRouteTableVPCB

  VPCBEc2SecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open ports for ICMP
      GroupName: "VPC B Security Group"
      VpcId:
        Ref: VPCB
      SecurityGroupIngress:
        - IpProtocol: icmp
          CidrIp: 10.0.0.0/8
          FromPort: "-1"
          ToPort: "-1"
        - IpProtocol: icmp
          CidrIp: 172.16.0.0/16
          FromPort: "-1"
          ToPort: "-1"

  ServerEc2VPCB:
    Type: AWS::EC2::Instance
    DependsOn: 
      - PrivateSubnet1VPCB
      - VPCBEc2SecGroup
    Properties:
      SubnetId: !Ref PrivateSubnet1VPCB
      ImageId: !Ref AMI
      InstanceType: t2.micro
      SecurityGroupIds: 
        - Ref: VPCBEc2SecGroup
      IamInstanceProfile: "SSM-Role"
      Tags:
        - Key: Name
          Value: "VPC B Private AZ1 Server"

  # VPC C Resources
  VPCC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.2.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: "VPC C"

  PublicSubnet1VPCC:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCC
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: "10.2.0.0/24"
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC C Public Subnet AZ1"

  PublicSubnet2VPCC:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCC
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: "10.2.2.0/24"
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC C Public Subnet AZ2"

  PublicSubnetRouteTableVPCC:
    Type: AWS::EC2::RouteTable
    DependsOn: VPCC
    Properties:
      VpcId: !Ref VPCC
      Tags:
        - Key: Name
          Value: "VPC C Public Route Table"

  PublicASubnetRouteTableAssociationVPCC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PublicSubnetRouteTableVPCC
      - PublicSubnet1VPCC
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableVPCC
      SubnetId: !Ref PublicSubnet1VPCC

  PublicBSubnetRouteTableAssociationVPCC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PublicSubnetRouteTableVPCC
      - PublicSubnet2VPCC
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTableVPCC
      SubnetId: !Ref PublicSubnet2VPCC

  PrivateSubnet1VPCC:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCC
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: "10.2.1.0/24"
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC C Private Subnet AZ1"

  PrivateSubnet2VPCC:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VPCC
    Properties:
      VpcId: !Ref VPCC
      CidrBlock: "10.2.3.0/24"
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC C Private Subnet AZ2"

  PrivateSubnetRouteTableVPCC:
    Type: AWS::EC2::RouteTable
    DependsOn: VPCC
    Properties:
      VpcId: !Ref VPCC
      Tags:
        - Key: Name
          Value: "VPC C Private Route Table"

  PrivateASubnetRouteTableAssociationVPCC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PrivateSubnetRouteTableVPCC
      - PrivateSubnet1VPCC
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableVPCC
      SubnetId: !Ref PrivateSubnet1VPCC

  PrivateBSubnetRouteTableAssociationVPCC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - PrivateSubnetRouteTableVPCC
      - PrivateSubnet2VPCC
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableVPCC
      SubnetId: !Ref PrivateSubnet2VPCC

  VPCCInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "VPC C IGW"

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: 
      - VPCC
      - VPCCInternetGateway
    Properties:
      VpcId: !Ref VPCC
      InternetGatewayId: !Ref VPCCInternetGateway

  VPCCDirectInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: 
      - AttachGateway
      - PublicSubnetRouteTableVPCC
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCCInternetGateway
      RouteTableId: !Ref PublicSubnetRouteTableVPCC

  VPCCNATEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc

  VPCCNATGateway:
    Type: "AWS::EC2::NatGateway"
    DependsOn:
      - AttachGateway
      - PublicSubnet1VPCC
    Properties:
      AllocationId: !GetAtt 'VPCCNATEIP.AllocationId'
      SubnetId: !Ref PublicSubnet1VPCC
      Tags:
        - Key: Name
          Value: "VPC C NATGW"

  VPCCNATInternetRoutePrivate:
    Type: AWS::EC2::Route
    DependsOn: 
      - VPCCNATGateway
      - PrivateSubnetRouteTableVPCC
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VPCCNATGateway
      RouteTableId: !Ref PrivateSubnetRouteTableVPCC

  VPCCEc2SecGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPCC
    Properties:
      GroupDescription: Open ports for ICMP
      GroupName: "VPC C Security Group"
      VpcId: !Ref VPCC
      SecurityGroupIngress:
        - IpProtocol: icmp
          CidrIp: 10.0.0.0/8
          FromPort: "-1"
          ToPort: "-1"
        - IpProtocol: icmp
          CidrIp: 172.16.0.0/16
          FromPort: "-1"
          ToPort: "-1"

  ServerEc2VPCC:
    Type: AWS::EC2::Instance
    DependsOn: 
      - PrivateSubnet1VPCC
      - VPCCEc2SecGroup
    Properties:
      SubnetId: !Ref PrivateSubnet1VPCC
      ImageId: !Ref AMI
      InstanceType: t2.micro
      SecurityGroupIds: 
        - Ref: VPCCEc2SecGroup
      IamInstanceProfile: "SSM-Role"
      Tags:
        - Key: Name
          Value: "VPC C Private AZ1 Server"

Outputs:
  # VPC A Outputs
  VPCA:
    Description: "The Created VPC"
    Value: !Ref VpcA
    Export:
      Name: !Sub "VPCA-${AWS::StackName}-VPC"
  VPCAPublicServerPublicIp:
    Description: "VPC A Public EC2 Public IP address"
    Value: !GetAtt VpcAPublicServerEc2.PublicIp
    Export:
      Name: !Sub "VPCA-${AWS::StackName}-PublicServerPublicIP"
  VPCAPublicServerPrivateIp:
    Description: "VPC A Public EC2 Private IP address"
    Value: !GetAtt VpcAPublicServerEc2.PrivateIp
    Export:
      Name: !Sub "VPCA-${AWS::StackName}-PublicServerPrivateIP"
  VPCAPrivateServer:
    Description: "VPC A Private EC2 IP address"
    Value: !GetAtt ServerEc2VPCB.PrivateIp
    Export:
      Name: !Sub "VPCA-${AWS::StackName}-PrivateServerPrivateIP"

  # VPC B Outputs
  VPCB:
    Description: "The Created VPC"
    Value: !Ref VPCB
    Export:
      Name: !Sub "VPCB-${AWS::StackName}-VPC"
  ServerVPCB:
    Description: "VPCB1 EC2 IP address"
    Value: !GetAtt ServerEc2VPCB.PrivateIp
    Export:
      Name: !Sub "VPCB-${AWS::StackName}-ServerIP"

  # VPC C Outputs
  VPCC:
    Description: "Datacenter Services VPC"
    Value: !Ref VPCC
    Export:
      Name: !Sub "VPCC-${AWS::StackName}-VPC"
  ServerVPCC:
    Description: "VPCC EC2 IP address"
    Value: !GetAtt ServerEc2VPCC.PrivateIp
    Export:
      Name: !Sub "VPCC-${AWS::StackName}-ServerIP"
